[metadata]
name = Graphene-Python-Gateway
version = 0.1
description = An Open Source Gateway for Graphene Blockchains
long_description = file: README.md, License.txt
keywords = BitShares, Graphene, Gateway
license = wtfpl
author = litepresence
platforms = linux
classifiers = 
	Framework :: Falcon
	Programming Language :: Python :: 3.8+

[options]
packages = GPG
python_requires = >=3.8
zip_safe = False
install_requires =
	falcon~=3.1.0
	bitshares~=0.7.1
	eosiopy~=0.1.4
	requests~=2.28.1
	websocket-client~=0.59.0
	secp256k1~=0.14.0
	ecdsa~=0.15
	aioxrpy~=1.0.0

[options.entry_points]
console_scripts = 
	Graphene-Python-Gateway = GPG.Gateway:main
